dnl $Id: configure.in,v 1.6 2004/02/22 15:36:41 erik Exp $

AC_INIT(epac.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(epac, 0.4)

AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_HEADERS(ctype.h dirent.h fcntl.h math.h stdio.h stdlib.h string.h sys/fcntl.h sys/mman.h sys/stat.h sys/types.h sys/uio.h unistd.h,,AC_ERROR(Missing necessary headers!))

AC_SEARCH_LIBS(fabs,m,,AC_ERROR(needs fabs!))


AC_OUTPUT(Makefile epac.spec doxygen.conf)
