dnl $Id: configure.in,v 1.7 2004/02/22 18:23:30 erik Exp $

AC_INIT(epac.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(epac, 0.4)

AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_HEADERS(ctype.h dirent.h fcntl.h math.h stdio.h stdlib.h string.h sys/fcntl.h sys/mman.h sys/stat.h sys/types.h sys/uio.h unistd.h,,AC_ERROR(Missing necessary headers!))
AC_SEARCH_LIBS(fabs,m,,AC_ERROR(needs fabs!))

COVERAGE_CFLAGS=
AM_PATH_CHECK(,[
		TEST=test
		COVERAGE_CFLAGS="-fprofile-arcs -ftest-coverage"
		] ,TEST=)
AC_SUBST(CHECK_CFLAGS)
AC_SUBST(CHECK_LIBS)
AC_SUBST(TEST)
AC_SUBST(COVERAGE_CFLAGS)

AC_OUTPUT(Makefile epac.spec doxygen.conf tests/Makefile)
